--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <div class="card">
-  <app-search-box></app-search-box>
+  <app-search-box (termChange)="termChange.next($event)" [autofill]="autofill" ></app-search-box>
+  <div class="result-preview collapsed" [ngClass]="{'collapsed' : !expand }">
+    <app-results-box class="results" [results]="results"></app-results-box>
+    <app-preview-box class="preview" 
+    [content]="results[arrowkeyLocation]?.preview?.content"
+    [type]="results[arrowkeyLocation]?.preview?.type"
+    ></app-preview-box>
+  </div>
 </div>
