--- a/src/app/search-box/search-box.component.html
+++ b/src/app/search-box/search-box.component.html
@@ -1,11 +1,12 @@
-<div class="search-contarner">
+<div class="search-contarner draggable-area">
     <div class="inner-container">
         <div 
         class="shadow-content"
-        [textContent]="termShadow" 
+        [textContent]="this.term+this.autofill" 
         ></div>
 
         <div 
+        #editable
         contentEditable="true" 
         class="search-box"
         [textContent]="term" 
