--- a/src/app/results-box/results-box.component.html
+++ b/src/app/results-box/results-box.component.html
@@ -1,7 +1,6 @@
 <div class="menuContainer">
-    <div class="menuItem" *ngFor="let result of results; index as i;" >
+    <div class="menuItem" ngClass="{'selected':selected==i}" *ngFor="let result of results; index as i;" >
         <img *ngIf="result.icon" src="result.icon" alt="">
-        <div class="title">{{result.title}}</div>
-        <div class="subtitle">{{result.subtitle}}</div>
+        <div class="title">{{result.title}}<span *ngIf="result.subtitle!==undefined||result.subtitle===''"> - {{result.subtitle}}</span></div>
     </div>
 </div>
