--- a/src/app/results-box/results-box.component.scss
+++ b/src/app/results-box/results-box.component.scss
@@ -19,4 +19,7 @@
         }
         /* background-color: #00000040;*/
     }
+    .menuItem.selected{
+        background-color: rgba(4, 118, 224, 0.925);
+    }
 }
